// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post Component should match snapshot 1`] = `
<div
  className="posts"
>
  <div>
    <div
      className="p_i"
    >
      <div
        className="p_i_img"
      >
        <img
          src="/users/24/avatar.jpg"
        />
      </div>
      <div
        className="p_i_1"
        style={
          Object {
            "top": "inherit",
          }
        }
      >
        <Link
          title="takkar"
          to="/profile/takkar"
        >
          takkar
        </Link>
        <span
          className="p_i_1_title"
          title="A-301, 90 Feet Road, Dharavi, Mumbai, Maharashtra 400017, India"
        >
          A-301, 90 Feet Road, Dharavi, Mum..
        </span>
      </div>
      <div>
        <div
          className="p_i_2"
        >
          <div
            className="p_time"
          >
            <span>
              a month ago
            </span>
          </div>
          <div
            className="p_h_opt"
          >
            <span
              className="exp_p_menu"
              onClick={[Function]}
            >
              <i
                className="material-icons"
              >
                expand_more
              </i>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="p_o"
    >
      <div
        className="p_actual"
        spellCheck="false"
      >
        <div
          className="p_abt"
          style={
            Object {
              "marginBottom": "10px",
            }
          }
        >
          <p>
            <span>
              he 
              <Link
                className="hashtag"
                to="/profile/nobita"
              >
                @nobita, 
              </Link>
              <Link
                className="hashtag"
                to="/profile/doraemon"
              >
                @doraemon 
              </Link>
              <Link
                className="hashtag"
                to="/hashtag/checkout"
              >
                #checkout, 
              </Link>
              <Link
                className="hashtag"
                to="/hashtag/dd"
              >
                #dd 
              </Link>
              <Link
                className="hashtag"
                to="/hashtag/fgf"
              >
                #fgf 
              </Link>
            </span>
          </p>
        </div>
        <img
          className="p_img filter-ashby"
          onClick={[Function]}
          src="/posts/instagram_1518972814710.jpg"
        />
        <div>
          <div>
            <span
              className="p_tag_icon"
              data-tip="1 tag"
              onClick={[Function]}
            >
              <i
                className="material-icons"
              >
                account_circle
              </i>
            </span>
            <div
              className="__react_component_tooltip place-top type-dark "
              data-id="tooltip"
            >
              
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <hr
    className="img_d_hr"
  />
  <div>
    <div
      className="p_a"
    >
      <div
        className="p_do"
      >
        <div
          className="p_Like_wra"
        >
          <span
            className="p_like p_like_icon"
            data-tip="Like"
            onClick={[Function]}
          >
            <i
              className="material-icons"
            >
              favorite_border
            </i>
          </span>
        </div>
        <div
          className="p_bmrk_wra"
        >
          <span
            className="p_bookmark"
            data-tip="Bookmark"
            onClick={[Function]}
          >
            <i
              className="material-icons"
            >
              bookmark_border
            </i>
          </span>
        </div>
        <div
          className="p_send_wra"
        >
          <span
            className="p_send"
            data-tip="Share"
            onClick={[Function]}
          >
            <i
              className="material-icons"
            >
              send
            </i>
          </span>
        </div>
      </div>
      <div
        className="p_did"
      >
        <span
          className="p_likes likes"
          onClick={[Function]}
        >
          3 likes
        </span>
        <span
          className="p_comm"
          onClick={[Function]}
        >
          3 shares
        </span>
      </div>
    </div>
  </div>
  <hr />
  <div>
    <Link
      className="p_comments"
      to="/post/89"
    >
      2 comments
    </Link>
    <div
      className="p_cit"
    >
      <div
        className="p_cit_img"
      >
        <img
          src="/users/24/avatar.jpg"
        />
      </div>
      <div
        className="p_cit_main"
      >
        <div
          className="p_cit_teaser"
          onClick={[Function]}
        >
          <span>
            Wanna comment?
          </span>
        </div>
        <div
          className="p_cit_tool"
        >
          <div>
            <span
              className="c_sticker"
              data-tip="Add sticker"
              onClick={[Function]}
            >
              <i
                className="material-icons"
              >
                face
              </i>
            </span>
            <div
              className="__react_component_tooltip place-top type-dark "
              data-id="tooltip"
            >
              
            </div>
          </div>
          <div>
            <form
              className="p_comment_form"
              encType="multipart/form-data"
            >
              <input
                accept="image/*"
                id="file_input"
                onChange={[Function]}
                type="file"
                value=""
              />
              <label
                className=""
                htmlFor="file_input"
              >
                <div
                  data-tip="Attach a file"
                >
                  <i
                    className="material-icons"
                  >
                    attach_file
                  </i>
                </div>
              </label>
            </form>
          </div>
        </div>
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`Post Component should match snapshot with comments 1`] = `
<div
  className="posts"
>
  <div>
    <div
      className="p_i"
    >
      <div
        className="p_i_img"
      >
        <img
          src="/users/24/avatar.jpg"
        />
      </div>
      <div
        className="p_i_1"
        style={
          Object {
            "top": "inherit",
          }
        }
      >
        <Link
          title="takkar"
          to="/profile/takkar"
        >
          takkar
        </Link>
        <span
          className="p_i_1_title"
          title="A-301, 90 Feet Road, Dharavi, Mumbai, Maharashtra 400017, India"
        >
          A-301, 90 Feet Road, Dharavi, Mum..
        </span>
      </div>
      <div>
        <div
          className="p_i_2"
        >
          <div
            className="p_time"
          >
            <span>
              a month ago
            </span>
          </div>
          <div
            className="p_h_opt"
          >
            <span
              className="exp_p_menu"
              onClick={[Function]}
            >
              <i
                className="material-icons"
              >
                expand_more
              </i>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="p_o"
    >
      <div
        className="p_actual"
        spellCheck="false"
      >
        <div
          className="p_abt"
          style={
            Object {
              "marginBottom": "10px",
            }
          }
        >
          <p>
            <span>
              he 
              <Link
                className="hashtag"
                to="/profile/nobita"
              >
                @nobita, 
              </Link>
              <Link
                className="hashtag"
                to="/profile/doraemon"
              >
                @doraemon 
              </Link>
              <Link
                className="hashtag"
                to="/hashtag/checkout"
              >
                #checkout, 
              </Link>
              <Link
                className="hashtag"
                to="/hashtag/dd"
              >
                #dd 
              </Link>
              <Link
                className="hashtag"
                to="/hashtag/fgf"
              >
                #fgf 
              </Link>
            </span>
          </p>
        </div>
        <img
          className="p_img filter-ashby"
          onClick={[Function]}
          src="/posts/instagram_1518972814710.jpg"
        />
        <div>
          <div>
            <span
              className="p_tag_icon"
              data-tip="1 tag"
              onClick={[Function]}
            >
              <i
                className="material-icons"
              >
                account_circle
              </i>
            </span>
            <div
              className="__react_component_tooltip place-top type-dark "
              data-id="tooltip"
            >
              
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <hr
    className="img_d_hr"
  />
  <div>
    <div
      className="p_a"
    >
      <div
        className="p_do"
      >
        <div
          className="p_Like_wra"
        >
          <span
            className="p_like p_like_icon"
            data-tip="Like"
            onClick={[Function]}
          >
            <i
              className="material-icons"
            >
              favorite_border
            </i>
          </span>
        </div>
        <div
          className="p_bmrk_wra"
        >
          <span
            className="p_bookmark"
            data-tip="Bookmark"
            onClick={[Function]}
          >
            <i
              className="material-icons"
            >
              bookmark_border
            </i>
          </span>
        </div>
        <div
          className="p_send_wra"
        >
          <span
            className="p_send"
            data-tip="Share"
            onClick={[Function]}
          >
            <i
              className="material-icons"
            >
              send
            </i>
          </span>
        </div>
      </div>
      <div
        className="p_did"
      >
        <span
          className="p_likes likes"
          onClick={[Function]}
        >
          3 likes
        </span>
        <span
          className="p_comm"
          onClick={[Function]}
        >
          3 shares
        </span>
      </div>
    </div>
  </div>
  <hr />
  <div>
    <Link
      className="p_comments"
      to="/post/89"
    >
      2 comments
    </Link>
    <div
      className="p_cit"
    >
      <div
        className="p_cit_img"
      >
        <img
          src="/users/24/avatar.jpg"
        />
      </div>
      <div
        className="p_cit_main"
      >
        <div
          className="p_cit_teaser"
          onClick={[Function]}
        >
          <span>
            Wanna comment?
          </span>
        </div>
        <div
          className="p_cit_tool"
        >
          <div>
            <span
              className="c_sticker"
              data-tip="Add sticker"
              onClick={[Function]}
            >
              <i
                className="material-icons"
              >
                face
              </i>
            </span>
            <div
              className="__react_component_tooltip place-top type-dark "
              data-id="tooltip"
            >
              
            </div>
          </div>
          <div>
            <form
              className="p_comment_form"
              encType="multipart/form-data"
            >
              <input
                accept="image/*"
                id="file_input"
                onChange={[Function]}
                type="file"
                value=""
              />
              <label
                className=""
                htmlFor="file_input"
              >
                <div
                  data-tip="Attach a file"
                >
                  <i
                    className="material-icons"
                  >
                    attach_file
                  </i>
                </div>
              </label>
            </form>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="comments_div"
      >
        <div>
          <div
            className="comments"
          >
            <img
              className="comments_avatar"
              src="/users/7/avatar.jpg"
            />
            <div
              className="comments_content"
            >
              <Link
                className="comments_user"
                to="/profile/ghalib"
              >
                ghalib
              </Link>
              <p
                className="ce"
              >
                <span>
                  <a
                    className="hashtag"
                    href="https://regexr.com/?37i6s"
                    target="_blank"
                  >
                    https://regexr.com/?37i6s 
                  </a>
                  fffffm 
                </span>
              </p>
              <div
                className="comments_bottom"
              >
                <span
                  className="comments_time"
                >
                  a month ago
                </span>
              </div>
              <div
                className="__react_component_tooltip place-top type-dark "
                data-id="tooltip"
              >
                
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            className="comments"
          >
            <img
              className="comments_avatar"
              src="/users/8/avatar.jpg"
            />
            <div
              className="comments_content"
            >
              <Link
                className="comments_user"
                to="/profile/coldplay"
              >
                coldplay
              </Link>
              <img
                className="comments_img"
                onClick={[Function]}
                src="/comments/instagram_comment_1518972851259.jpg"
              />
              <div
                className="comments_bottom"
              >
                <span
                  className="comments_time"
                >
                  a month ago
                </span>
              </div>
              <div
                className="__react_component_tooltip place-top type-dark "
                data-id="tooltip"
              >
                
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            className="comments"
          >
            <img
              className="comments_avatar"
              src="/users/24/avatar.jpg"
            />
            <div
              className="comments_content"
            >
              <Link
                className="comments_user"
                to="/profile/takkar"
              >
                takkar
              </Link>
              <img
                className="comments_sticker"
                src="/comments/instagram_comment_1527447929485.jpg"
              />
              <div
                className="comments_bottom"
              >
                <span
                  className="comments_time"
                >
                  a month ago
                </span>
              </div>
              <div
                className="__react_component_tooltip place-top type-dark "
                data-id="tooltip"
              >
                
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
